--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -12,49 +12,48 @@ html body {
     text-align: center;
     overflow-x: hidden;
     color: $color_3;
-    width: 100%;
-    height: 100%;
-    display: block;
-    margin: 0px auto;
 }
 
 .wrapper {
-    width: 100%;
-    // min-height: 100%;
+    margin: 0px auto;
+}
+
+.block {
     display: flex;
     flex-direction: column;
     align-items: center;
-    @media (max-width: $maxWidth) {
-        max-width: $maxWidth;
-    }
-    @media (max-width: $md1) {
-        max-width: $md1;
-    }
-    @media (max-width: $md2) {
-        max-width: $md2;
-    }
-    @media (max-width: $md3) {
-        max-width: $md3;
-    }
-    @media (max-width: $md4) {
-        max-width: $md4;
-    }
+    justify-content: center;
 }
 
 .container {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0% 3%;
+    // min-width: 100%;
+    max-width: $maxWidthContainer;
+    @media (minWidth: 479.98px) {}
+    @media (min-width: 767.98px) {}
+    @media (min-width: 991.98px) {}
+    @media (min-width: 1212px) {}
+}
+
+.main {
+    // width: 100%;
+    // display: flex;
+    // flex-direction: column;
+    // flex: 1 1 auto;
 }
 
 .button-link {
     width: 200px;
     height: 45px;
+    font-size: 16px;
+    line-height: 44px;
     background: #4985FF;
     box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
     border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
     text-align: center;
     box-shadow: 0px 0px 10px 0px #6F6F6F40;
     opacity: 1;
@@ -72,64 +71,71 @@ html body {
 }
 
 .title {
-    font-size: 36px;
-    font-style: normal;
+    font-size: 24px;
+    line-height: 30px;
     font-weight: 700;
-    line-height: 53px;
-    letter-spacing: 0em;
-    text-align: center;
     color: $color_2;
     padding: 50px;
     max-width: 800px;
-    align-self: center;
-    // @media (max-width: $maxWidth) {
-    //     max-width: $maxWidth;
-    // }
-    // @media (max-width: $md1) {
-    //     max-width: $md1;
-    // }
-    @media (max-width: $md2) {
-        font-size: 30px;
+    // align-self: center;
+    @media (minWidth: 479.98px) {}
+    @media (min-width: 767.98px) {}
+    @media (min-width: 991.98px) {
+        font-size: 36px;
+        line-height: 53px;
     }
-    @media (max-width: $md3) {
-        // max-width: $md3;
-    }
-    @media (max-width: $md4) {
-        // max-width: $md4;
-    }
+    @media (min-width: 1212px) {}
 }
 
 .white-text {
     color: $color_6;
 }
 
-.main {
+.first-screen {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
+    height: 100%;
+    background-image: url("../img/header/header_bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    top: 0px;
+    left: 0px;
+    &__title {
+        font-size: 34px;
+        line-height: 34px;
+        font-weight: 800;
+        @media (min-width: 767.98px) {
+            font-size: 36px;
+            line-height: 53px;
+        }
+        @media (min-width: 991.98px) {
+            font-size: 40px;
+            line-height: 54px;
+            max-width: 830px;
+        }
+    }
+    &__container {
+        height: inherit;
+        padding: 60px 10px 80px 10px;
+        @media (minWidth: 479.98px) {}
+        @media (min-width: 767.98px) {
+            padding: 100px 20px 120px 20px;
+        }
+        @media (min-width: 991.98px) {
+            padding: 220px 250px 300px 250px;
+        }
+        @media (min-width: 1212px) {
+            padding: 220px 250px 300px 250px;
+        }
+    }
+    &__button-link {}
+    p {
+        font-weight: 500;
+        line-height: 20px;
+    }
 }
 
 //мы создаем мобильные приложения
 .services {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 3%;
-    // opacity: 0.1;
-    // &:hover {
-    opacity: 1;
-    //     transition: opacity 0.9s;
-    // }
-    &__container {
-        max-width: $maxWidthContainer;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
     &__title {
         max-width: 900px;
     }
@@ -140,17 +146,10 @@ html body {
     }
     &__row {
         display: flex;
-        flex-direction: row;
-        // @media (max-width: $maxWidth) {
-        // }
-        @media (max-width: $md1) {
-            flex-direction: column;
+        flex-direction: column;
+        @media (min-width: 1212px) {
+            flex-direction: row;
         }
-        // 
-        // @media (max-width: $md3) {
-        // }
-        // @media (max-width: $md4) {
-        // }
     }
     &__column {
         display: flex;
@@ -158,18 +157,16 @@ html body {
         margin: 50px 14px;
     }
     &__button-link {
-        display: flex;
-        align-self: center;
         margin: 50px;
     }
 }
 
 .item {
-    max-width: 353px;
-    flex: 0 0 33.333%;
-    @media (max-width: $md1) {
-        max-width: 600px;
-        flex: 0 1;
+    max-width: 600px;
+    flex: 0 1;
+    @media (min-width: 1212px) {
+        max-width: 353px;
+        flex: 0 0 33.333%;
     }
     &__icon-container {
         width: 112px;
@@ -204,52 +201,41 @@ html body {
         color: $color_2;
     }
     &__text {
-        max-width: 222px;
+        max-width: 400px;
+        padding: 1% 5%;
         display: flex;
         flex-direction: column;
         text-align: left;
-        padding: 10% 5%;
-        @media (max-width: $md1) {
-            max-width: 400px;
-            padding: 1% 5%;
+        @media (min-width: 1212px) {
+            max-width: 222px;
+            padding: 10% 5%;
         }
     }
 }
 
 //высокие стандарты разработки
 .about-us {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: #F6F6F8;
-    margin: 0px auto;
-    padding: 3%;
     &__container {
-        max-width: $maxWidthContainer;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        background-color: #F6F6F8;
     }
     &__row {
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        @media (max-width: $md1) {
-            flex-direction: column-reverse;
-            align-items: center;
+        flex-direction: column-reverse;
+        align-items: center;
+        // justify-content: space-around;
+        @media (min-width: 1212px) {
+            flex-direction: row;
         }
     }
     &__row-items {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        @media (max-width: $md2) {
+        flex-wrap: wrap;
+        @media (min-width: 991.98px) {
             display: flex;
             flex-direction: row;
-            flex-wrap: wrap;
+            justify-content: space-around;
         }
     }
     &__column {
@@ -258,9 +244,9 @@ html body {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        flex: 0 50%;
+        // flex: 0 50%;
         padding: 20px 20px;
-        margin: 0px 0px 50px 0px;
+        // margin: 0px 0px 50px 0px;
     }
     &__link {
         display: inline-block;
@@ -275,10 +261,10 @@ html body {
     &__img {
         width: 100% auto;
         height: 100% auto;
-        margin-left: 60px;
+        margin-left: 0px;
         border-radius: 30px;
-        @media (max-width: $md1) {
-            margin-left: 0px;
+        @media (max-width: 1212px) {
+            margin-left: 60px;
         }
     }
     &__item {
@@ -297,7 +283,7 @@ html body {
     }
     &__item-numbers {
         font-style: normal;
-        font-weight: normal;
+        font-weight: 400;
         font-size: 36px;
         line-height: 53px;
         color: $color_2;
@@ -314,50 +300,38 @@ html body {
             color: $color_3;
         }
     }
+    &__button-link {}
 }
 
 .row-border {
     border-bottom: 1px solid $color_4;
 }
 
-//наши работы
 .all-services {
-    width: 100%;
     background: linear-gradient(90deg, #504DC2 20.44%, #5F12D0 80.91%), linear-gradient(to right, $color_6 100%);
     background-size: 100% 50%;
     background-position: center top, center bottom;
     background-repeat: no-repeat;
     text-align: left;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 100px;
-    margin: 0px auto;
-    @media (max-width: $md1) {
-        background-size: 100% 100%;
-        color: $color_6;
-    }
+    // margin: 0px auto;
+    // @media (max-width: 1200px) {
+    //     background-size: 100% 100%;
+    //     color: $color_6;
+    // }
     // opacity: 0.1;
     // &:hover {
     opacity: 1;
     //     transition: opacity 0.9s;
     // }
-    &__container {
-        max-width: $maxWidthContainer;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        justify-content: center;
-        margin: 0px auto;
-    }
+    &__container {}
     &__title {
         text-align: left;
         padding: 0px 0px 15px 15px;
-        @media (max-width: $md1) {
+        @media (max-width: 1200px) {
             padding: 0px 0px 10px 50px;
         }
-        @media (max-width: $md3) {
+        @media (max-width: 767.98px) {
             padding: 0px 0px 10px 30px;
         }
     }
@@ -365,10 +339,10 @@ html body {
         display: flex;
         align-self: flex-start;
         margin: 30px 0px 0px 0px;
-        @media (max-width: $md1) {
+        @media (max-width: 1200px) {
             margin: 30px 0px 50px 50px;
         }
-        @media (max-width: $md3) {
+        @media (max-width: 767.98px) {
             margin: 30px 0px 50px 30px;
         }
     }
@@ -377,7 +351,7 @@ html body {
         flex-direction: row;
         align-items: flex-start;
         justify-content: space-between;
-        @media (max-width: $md1) {
+        @media (max-width: 1200px) {
             flex-direction: column;
             align-items: center;
             justify-content: center;
@@ -392,26 +366,26 @@ html body {
         flex: 0 0 33.333%;
         box-sizing: border-box;
         margin: 15px 15px;
-        @media (max-width: $md1) {
+        @media (max-width: 1200px) {
             max-width: 700px;
             flex-direction: row;
             align-content: center;
             flex: 0 1;
         }
-        @media (max-width: $md3) {
+        @media (max-width: 767.98px) {
             max-width: 700px;
             flex-direction: column;
-            // flex: 0 1;
+            margin: 0px 0px;
         }
     }
     &__img {
         margin: 15px 0px;
     }
     &__text-container {
-        @media (max-width: $md1) {
+        @media (max-width: 1200px) {
             margin: 10px 0px 0px 60px;
         }
-        @media (max-width: $md3) {
+        @media (max-width: 767.98px) {
             margin: 10px 0px 0px 0px;
         }
     }
@@ -422,7 +396,7 @@ html body {
         line-height: 22px;
         color: $color_2;
         margin: 15px 0px;
-        @media (max-width: $md1) {
+        @media (max-width: 1200px) {
             color: $color_6;
         }
         span {
@@ -441,7 +415,7 @@ html body {
 
 // наши проекты
 .all-projects {
-    width: 100%;
+    // width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -449,34 +423,24 @@ html body {
     background-color: #F6F6F8;
     padding: 3%;
     &__container {
-        max-width: $maxWidthContainer;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        margin: 0px auto;
         p {
             padding: 0px 40px 40px;
         }
     }
     &__row {
-        width: 1160px;
-        // display: flex;
-        // flex-direction: row;
-        // -webkit-grid-
+        max-width: 1160px;
         display: grid;
         grid-template-rows: 1fr;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         margin: 25px 25px;
-        @media (max-width: $md1) {
+        @media (max-width: 1200px) {
             max-width: 700px;
             display: grid;
             grid-template-rows: 1fr 1fr;
             grid-template-columns: 1fr 1fr;
             margin: 0px auto;
         }
-        @media (max-width: $md3) {
+        @media (max-width: 767.98px) {
             max-width: 700px;
             display: flex;
             flex-direction: column;
@@ -510,19 +474,9 @@ html body {
     background-position: 0 0;
     background-size: 100% 50vh;
     background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 3%;
     opacity: 1;
     &__container {
-        max-width: $maxWidthContainer;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
         border-bottom: 1px solid $color_4;
     }
     &__title {
@@ -530,39 +484,33 @@ html body {
     }
     &__video {
         border-radius: 10px;
-        margin: 70px;
+        margin-top: 70px;
         width: 970px;
         height: 430px;
         border: none;
-        @media (max-width: $md2) {
+        @media (max-width: 1200px) {
             width: 750px;
             height: 330px;
-            // width: 100%;
-            // height: 100%;
+            margin-top: 40px;
         }
-        @media (max-width: $md3) {
+        @media (max-width: 991.98px) {
             width: 450px;
             height: 220px;
-            // width: 100%;
-            // height: 100%;
         }
-        @media (max-width: $md4) {
+        @media (max-width: 767.98px) {}
+        @media (max-width: 479.98px) {
             width: 300px;
             height: 145px;
-            // width: 100%;
-            // height: 100%;
         }
     }
 }
 
 .subscribe {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: $color_6;
     padding: 4%;
+    &__container {
+        padding: 4%;
+    }
     &__title {
         font-size: 18px;
         font-style: normal;
@@ -589,10 +537,10 @@ html body {
         box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
         border-radius: 30px 30px 30px 30px;
         margin: 30px;
-        @media (max-width: $md3) {
+        @media (max-width: 767.98px) {
             width: 400px;
         }
-        @media (max-width: $md4) {
+        @media (max-width: 479.98px) {
             width: 300px;
         }
     }
@@ -610,10 +558,10 @@ html body {
         font-size: 13px;
         line-height: 21px;
         color: #999999;
-        @media (max-width: $md3) {
+        @media (max-width: 767.98px) {
             width: 250px;
         }
-        @media (max-width: $md4) {
+        @media (max-width: 479.98px) {
             width: 150px;
         }
         input::placeholder {
@@ -637,7 +585,7 @@ html body {
         text-align: center;
         color: $color_6;
         opacity: 1;
-        @media (max-width: $md4) {
+        @media (max-width: 479.98px) {
             width: 150px;
             font-size: 13px;
         }
