--- a/#source/scss/variables.scss
+++ b/#source/scss/variables.scss
@@ -1,10 +1,5 @@
-$minWidth: 320px;
-$maxWidth: 1920px;
+// $minWidth: 320px;
 $maxWidthContainer: 1110px; //изменяются в зависимости от макета
-$md1: 1200px;
-$md2: 991.98px;
-$md3: 767.98px;
-$md4: 479.98px;
 $color_1: #4985ff;
 $color_2: #323232;
 $color_3: #999999;
