--- a/#source/scss/footer.scss
+++ b/#source/scss/footer.scss
@@ -17,25 +17,25 @@
     }
     &__menu-list {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: flex-start;
         text-align: left;
-        @media (max-width: 1200px) {
+        padding: 0% 0%;
+        @media (min-width: 767.98px) {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr;
             padding: 0% 10%;
         }
-        @media (max-width: 767.98px) {
+        @media (min-width: 1200px) {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 0% 0%;
+            flex-direction: row;
+            align-items: flex-start;
         }
     }
     &__menu-list>li {}
     &__menu-link {
-        font-size: 18px;
+        font-size: 15px;
         font-weight: 600;
         line-height: 22px;
         color: #000000;
@@ -44,6 +44,9 @@
         position: relative;
         min-width: 255px;
         padding-bottom: 20px;
+        @media (min-width: 767.98px) {
+            font-size: 18px;
+        }
     }
     &__sub-menu-list {
         padding: 0px 0px 10px 0px;
@@ -67,9 +70,9 @@
 }
 
 .contact-links {
-    margin-right: 80px;
-    @media (max-width: 767.98px) {
-        margin-right: 0px;
+    margin-right: 0px;
+    @media (min-width: 767.98px) {
+        margin-right: 80px;
     }
 }
 
