--- a/#source/scss/footer.scss
+++ b/#source/scss/footer.scss
@@ -18,7 +18,7 @@
     &__menu-list {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        // align-items: flex-start;
         text-align: left;
         padding: 0% 0%;
         @media (min-width: 767.98px) {
@@ -31,6 +31,8 @@
             display: flex;
             flex-direction: row;
             align-items: flex-start;
+            // justify-content: center;
+            padding: 0% 2%;
         }
     }
     &__menu-list>li {}
