--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -1,159 +1,132 @@
-// @import "variables.scss";
-// .header {
-//     &__burger {
-//         position: fixed;
-//         top: 0px;
-//         right: 0px;
-//         width: 30px;
-//         height: 20px;
-//         margin: 30px;
-//         z-index: 5;
-//         display: none;
-//         @media (max-width: $md3) {
-//             display: block;
-//             span {
-//                 position: absolute;
-//                 background-color: #FFFFFF;
-//                 width: 100%;
-//                 height: 2px;
-//                 left: 0px;
-//                 top: 9px;
-//                 transition: all 0.3s ease 0s;
-//             }
-//             &::before,
-//             &::after {
-//                 content: '';
-//                 background-color: #FFFFFF;
-//                 position: absolute;
-//                 width: 100%;
-//                 height: 2px;
-//                 transition: all 0.3s ease 0s;
-//             }
-//             &::before {
-//                 left: 0px;
-//                 top: 0px;
-//             }
-//             &::after {
-//                 left: 0px;
-//                 bottom: 0px;
-//             }
-//         }
-//         & active span {
-//             transform: scale(0);
-//         }
-//         & active::before {
-//             transform: rotate(45deg);
-//             bottom: 9px;
-//         }
-//         & active::before {
-//             transform: rotate(-45deg);
-//             bottom: 9px;
-//         }
-//     }
-//     &__menu-container {
-//         // width: $maxWidth;
-//         // background-image: url("../img/header/header_bg.png");
-//         // background: transparent;
-//         // background-position: fixed;
-//         // top: 0;
-//         // background-size: auto auto;
-//         // background-repeat: no-repeat;
-//         // width: 100%;
-//         margin: 0px;
-//         position: fixed;
-//         top: 0;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-//         border-bottom: 1px solid #A1A1A1;
-//         box-sizing: border-box;
-//         &::before {
-//             content: '';
-//             background: transparent;
-//             position: absolute;
-//             top: 0px;
-//             width: 100%;
-//             height: 100%;
-//             // z-index: 3;
-//             // background-color: aqua;
-//         }
-//         &::after {
-//             content: '';
-//             background: turquoise;
-//             // transform: translateY(70px);
-//             // transition: transform 500ms ease, background 500ms ease;
-//             // -webkit-transition: transform 500ms ease, background 500ms ease;
-//         }
-//         &.out {
-//             transform: translateY(-100%);
-//             // background: turquoise;
-//         }
-//         // @media (max-width: $maxWidth) {
-//         //     max-width: $maxWidth;
-//         // }
-//         @media (max-width: $md1) {
-//             max-width: $md1;
-//         }
-//         @media (max-width: $md2) {
-//             max-width: $md2;
-//         }
-//         @media (max-width: $md3) {
-//             max-width: $md3;
-//         }
-//         @media (max-width: $md4) {
-//             max-width: $md4;
-//         }
-//     }
-//     &__menu {
-//         width: 100%;
-//         display: flex;
-//         flex-direction: row;
-//         align-items: center;
-//         @media (max-width: $maxWidth) {
-//             // max-width: $maxWidth;
-//         }
-//         @media (max-width: $md1) {
-//             align-self: center;
-//         }
-//         // @media (max-width: $md2) {
-//         //     max-width: $md2;
-//         // }
-//         // @media (max-width: $md3) {
-//         //     max-width: $md3;
-//         // }
-//         // @media (max-width: $md4) {
-//         //     max-width: $md4;
-//         // }
-//         a {
-//             font-size: 16px;
-//             font-style: normal;
-//             font-weight: 500;
-//             line-height: 20px;
-//             letter-spacing: 0em;
-//             text-align: left;
-//             color: $color_6;
-//             display: block;
-//             padding: 30px 20px 30px 20px;
-//             &:hover {
-//                 border-bottom: 2px solid $color_6;
-//                 padding: 30px 20px 28px 20px;
-//             }
-//         }
-//     }
-//     &__container {
-//         width: 100%;
-//         height: inherit;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-//         justify-content: center;
-//         padding: 220px 250px 300px 250px;
-//         // @media (max-width: $md1) {
-//         //     height: auto;
-//         //     padding: 100px 50px 150px 50px;
-//         // }
-//         // @media (max-width: $md4) {
-//         //     padding: 100px 25px 50px 25px;
-//         // }
-//     }
-// }
+@import "variables.scss";
+.header {
+    margin: 0px;
+    position: fixed;
+    z-index: 5;
+    width: 100%;
+    height: 100px;
+    border-bottom: 1px solid #A1A1A1;
+    transition: all .3s ease;
+    &__container {
+        display: flex;
+        flex-direction: row;
+        align-self: flex-end;
+        padding: 0%;
+        width: $maxWidthContainer;
+        height: 100px;
+    }
+    &__burger {
+        display: none;
+    }
+    &__menu-container {
+        a {
+            font-size: 16px;
+            font-weight: 500;
+            text-align: left;
+            padding: 0px 20px 39px 20px;
+            &:hover {
+                border-bottom: 2px solid $color_6;
+            }
+        }
+    }
+}
+
+@media (min-width: 767px) {
+    .header {
+        &.out {
+            transform: translateY(-100%);
+        }
+        &.bg {
+            background-color: $color_1;
+            height: 70px;
+            a {
+                padding: 0px 20px 25px 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 767px) {
+    body.lock {
+        overflow: hidden;
+    }
+    .header {
+        border-bottom: none;
+        background-color: $color_1;
+        height: 50px;
+        &__menu-container {
+            padding: 10% 5%;
+            a {
+                padding: 40px 0px 20px 0px;
+                transition: all 0.3s ease 0s;
+            }
+        }
+        &__burger {
+            display: block;
+            position: fixed;
+            top: 0px;
+            right: 0px;
+            width: 30px;
+            height: 20px;
+            margin: 15px;
+            z-index: 5;
+            span {
+                position: absolute;
+                background-color: #FFFFFF;
+                width: 100%;
+                height: 2px;
+                left: 0px;
+                top: 9px;
+                transition: all 0.3s ease 0s;
+            }
+            &::before,
+            &::after {
+                content: '';
+                background-color: #FFFFFF;
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                transition: all 0.3s ease 0s;
+            }
+            &::before {
+                left: 0px;
+                top: 0px;
+            }
+            &::after {
+                left: 0px;
+                bottom: 0px;
+            }
+        }
+        &__burger.active {
+            span {
+                transform: scale(0);
+            }
+            &:before {
+                transform: rotate(45deg);
+                top: 9px;
+            }
+            &:after {
+                transform: rotate(-45deg);
+                bottom: 9px;
+            }
+        }
+        &__menu {
+            display: none;
+            position: fixed;
+            top: -100%;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            transition: all 0.3s ease 0s;
+            background-color: $color_1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 5% 3% 5% 3%;
+        }
+        &__menu.active {
+            top: 0;
+        }
+    }
+}
